backgroud colors add in files

--- a/mysite/templates/about.html
+++ b/mysite/templates/about.html
@@ -10,6 +10,11 @@
     
         <title>Text analyser</title>
       </head>
+      <style>
+        body{
+          background-color:lightcyan;
+        }
+      </style>
       <body >
         
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
