--- a/mysite/templates/feature.html
+++ b/mysite/templates/feature.html
@@ -38,11 +38,11 @@
           </div>
           <div class="list-group">
             <a class="list-group-item list-group-item-action"><b>Features Name</b></a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-primary">Remove Punchuvation</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-secondary">UPPER CASE</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-success">New line remover</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-danger">Extra space remover</a>
-            <a href="#" class="list-group-item list-group-item-action list-group-item-warning">Character count</a>
+            <a class="list-group-item list-group-item-action list-group-item-primary">Remove Punchuvation</a>
+            <a class="list-group-item list-group-item-action list-group-item-secondary">UPPER CASE</a>
+            <a class="list-group-item list-group-item-action list-group-item-success">New line remover</a>
+            <a class="list-group-item list-group-item-action list-group-item-danger">Extra space remover</a>
+            <a class="list-group-item list-group-item-action list-group-item-warning">Character count</a>
 
           </div>
           
