--- a/mysite/templates/analyse.html
+++ b/mysite/templates/analyse.html
@@ -10,6 +10,11 @@
 
     <title>Analysing</title>
   </head>
+  <style>
+    body{
+      background-color:lightcyan;
+    }
+  </style>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#">TextAnalyser.in</a>
