--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -10,9 +10,14 @@
 
     <title>Text analyser</title>
   </head>
-  <body >
+  <style>
+    body{
+      background-color:lightcyan;
+    }
+  </style>
+  <body>
     
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
         <a class="navbar-brand" href="#">TextAnalyser.in</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
