--- a/mysite/templates/analyse.html
+++ b/mysite/templates/analyse.html
@@ -43,8 +43,11 @@
       </div>
       <div class="container">
             <h1>Your analyzing text-{{purpose}} </h1>
-            <p><pre></pre>{{analyse_text}}</pre></p> 
+            <h5><p><pre></pre>{{analyse_text}}</pre></p></h5>
       </div>
+      <footer style="margin-top:29.2%;">
+        <center><p>&copy; codewithharry.com</p></center>
+      </footer>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
