--- a/mysite/templates/analyse.html
+++ b/mysite/templates/analyse.html
@@ -24,10 +24,9 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">Features</a>
-            <a class="nav-link" href="#">Pricing</a>
-            <a class="nav-link" href="#">About us</a>
-            <a class="nav-link" href="#">Contact us</a>
+            <a class="nav-link" href="/feature">Features</a>
+            <a class="nav-link" href="/about">About us</a>
+            <a class="nav-link" href="/contact">Contact us</a>
           </div>
         </div>
         <form class="form-inline">
@@ -43,10 +42,10 @@
       </div>
       <div class="container">
             <h1>Your analyzing text-{{purpose}} </h1>
-            <h5><p><pre></pre>{{analyse_text}}</pre></p></h5>
+            <h4><p><pre>{{analyse_text}}</pre></p></h4>
       </div>
       <footer style="margin-top:29.2%;">
-        <center><p>&copy; codewithharry.com</p></center>
+        <center><p>&copy; 2020TextAnalyser.com</p></center>
       </footer>
       
     <!-- Optional JavaScript -->
