--- a/mysite/templates/index.html
+++ b/mysite/templates/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="custom-control custom-switch">
                 <input type="checkbox" name="removepunc"class="custom-control-input" id="customSwitch1">
-                <label class="custom-control-label" for="customSwitch1">Remove Punchuvation</label>
+                <label class="custom-control-label" for="customSwitch1">Remove punctuation</label>
               </div>
               <div class="custom-control custom-switch">
                 <input type="checkbox" name="fullcaps"class="custom-control-input" id="customSwitch2">
