--- a/myBootstrap/btProject/templates/contact.html
+++ b/myBootstrap/btProject/templates/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
-    <title>MyBt_webSite</title>
+    <title>Contact</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
                 <li class="nav-item ">
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item dropdown">
@@ -41,8 +41,8 @@
                         <a class="dropdown-item" href="#">Web Frame</a>
                     </div>
                 </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="/contact">ContactUs</a>
+                <li class="nav-item active">
+                    <a class="nav-link " href="/contact">ContactUs</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
@@ -52,45 +52,36 @@
         </div>
     </nav>
 
+
     <div class="container my-4">
-        <div class="row featurette d-flex justify-content-center align-items-center">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">It all started with iCoder idea. <span class="text-muted">It’ll blow your
-                        mind.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
+        <h2 class="mb-5">Contact our Team members</h2>
+        <form>
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Full Name</label>
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="xyz">
             </div>
-            <div class="col-md-5">
-                <img class="img-fluid" src="static/images/j.jpg" alt="">
+            <div class="form-group">
+                <label for="exampleFormControlInput1">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
             </div>
-        </div>
-        <div class="row featurette d-flex justify-content-center align-items-center">
-            <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading">We started in 2020 <span class="text-muted">It’ll blow your
-                        mind.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
+            <div class="form-group">
+                <label for="exampleFormControlSelect1">Select Query</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                    <option>Designing</option>
+                    <option>BackEnd</option>
+                    <option>Service</option>
+                    <option>Help</option>
+                    <option>Others</option>
+                </select>
             </div>
-            <div class="col-md-5 order-md-1">
-                <img class="img-fluid" src="static/images/m.jpg" alt="">
+
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1">Explain Here</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-        </div>
-        <div class="row featurette d-flex justify-content-center align-items-center">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">Lorem ipsum dolor sit amet consectetur adipisicing elit. <span
-                        class="text-muted">It’ll blow your
-                        mind.</span></h2>
-                <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis
-                    euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-                    tellus ac cursus commodo.</p>
-            </div>
-            <div class="col-md-5">
-                <img src="static/images/k.jpg" alt="..." class="img-thumbnail">
-                <!-- <img class="img-fluid" src="https://source.unsplash.com/400x300/?about,home" alt=""> -->
-            </div>
-        </div>
+        </form>
+        <button type="button" class="btn btn-danger">Submit</button>
+
     </div>
 
     <footer class="container">
